fixing overflow-y automatically

--- a/example/index.css
+++ b/example/index.css
@@ -10,8 +10,6 @@
       Unifont,Lime,"ClearlyU PUA",Clean,"DejaVu Sans Mono","Lucida Console",
       "Bitstream Vera Sans Mono",Freemono,"Liberation Mono",Dina,Anka,Droid Sans Mono,
       Anonymous Pro,Proggy fonts,Envy Code R,Gamow,Courier,"Courier New",Terminal,monospace;
-  overflow-x : scroll;
-  overflow-y : scroll;
 }
 
 #terminal-code {
